src/test/ui/consts/const-err4.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-err4.rs:9:21
   |
LL |     Boo = [unsafe { Foo { b: () }.a }; 4][3],
   |                     ^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
